<resources>
    <string name="app_name">HngSixAuthTask</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered, Login Here</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_click_to_register">New here,Click to register</string>
</resources>
